--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
  </script>
  <div>
        <div style="text-align:center;">
-          <label>选择SQL文件：</label><input type="file" id="uploadFile" onchange="readLocalFile()"; />
+          <label>1,选择SQL文件：</label><input type="file" id="uploadFile" onchange="readLocalFile()"; />
+           &nbsp;&nbsp;&nbsp;&nbsp;2,等待结果
         </div>
         <br/>  <br/>
         <div >
