--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     }
 
     function appendCheckSqlResult(checkItem, result, description) {
-      return "<tr><td>" + checkItem + " </td><td>" + (result?"通过":"不通过") + "</td><td>" + description + "</td></tr>";
+      return "<tr><td>" + checkItem + " </td><td>" + (result?"通过":"<font color="red">不通过</font>") + "</td><td>" + description + "</td></tr>";
     }
 
     </script>
